--- a/src/components/CardGame/style.css
+++ b/src/components/CardGame/style.css
@@ -1,3 +1,14 @@
+.card-content{
+    display: flex;
+    width: 300px;
+    height: 100vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 5px;
+}
+
 .card-game{
     display: flex;
     align-items: center;
@@ -5,5 +16,5 @@
     background-color: var(--color-alura);
     width: 130px;
     height: 160px;
-    border: 4px solid var(--color-floral-white);
+    border: 4px solid var(--color-floral-white)
 }
