--- a/src/components/CardGame/style.css
+++ b/src/components/CardGame/style.css
@@ -1,4 +1,4 @@
-.card-content{
+/* .card-content{
     display: flex;
     width: 300px;
     height: 100vh;
@@ -7,14 +7,15 @@
     align-items: center;
     margin: 0 auto;
     gap: 5px;
-}
+} */
 
 .card-game{
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--color-alura);
-    width: 130px;
-    height: 160px;
+    width: var(--width);
+    height: var(--height);
     border: 4px solid var(--color-floral-white)
 }
