--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -2,4 +2,5 @@
     --color-alura: #2c3e50;
     --color-pomb-and-power: #7c5e99;
     --color-floral-white: #fffcee;
+    --color-fiery-rose: #f25a70;
 }
